--- a/HW2/slice_exercise.ipynb
+++ b/HW2/slice_exercise.ipynb
@@ -34,8 +34,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "918fca5e-3d71-4cf9-9c9f-8da4080d1869",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: [0 2 3 4 5 6 7 9]\n",
+      "0: [1 8]\n",
+      "1: [1 2 3 4 6 7 8 9]\n",
+      "1: [0 5]\n",
+      "2: [0 1 3 4 5 6 8 9]\n",
+      "2: [2 7]\n",
+      "3: [0 1 2 3 5 6 7 8]\n",
+      "3: [4 9]\n",
+      "4: [0 1 2 4 5 7 8 9]\n",
+      "4: [3 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "kf = KFold(n_splits = 5,shuffle = True, random_state = 42)\n",
+    "X = [1,2,3,4,5,6,7,8,9,10]\n",
+    "# print(kf.split(X))\n",
+    "#可以看出k折交叉验证每次enumerate反回的是每次划分的一整个列表\n",
+    "for k,(x,y) in enumerate(kf.split(X)):\n",
+    "    print('{}:'.format(k),x)\n",
+    "    print('{}:'.format(k),y)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ada02a3-a920-48eb-9c41-cd6fa56f7fd6",
    "metadata": {},
    "outputs": [],
    "source": []
